<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<resources>

    <string name="app_name">Ez-Events</string>

    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

    <string name="dummy_section_text">Em Desenvolvimento</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="Login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="logo">logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_event_first_step">Basic Information</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="next_wizard">Next</string>
    <string name="firstWizardTop">Basic Information</string>
    <string name="firstWizardTitle">Title</string>
    <string name="firstWizardDescription">Description</string>
    <string name="firstWizardWhere">Where</string>
    <string name="title_activity_event_second_step">When</string>
    <string name="when">When</string>
    <string name="secondWizardTime">Time</string>
    <string name="secondWizardDate">Date</string>
    <string name="title_activity_check_list">Check List</string>
    <string name="thirdWizardCheckList">CheckList</string>
    <string name="title_activity_guests">Guests</string>
    <string name="fourthWizardGuests">Guests</string>
    <string name="title_activity_notify">Notifying</string>
    <string name="title_activity_where">Where</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_offer_help">Check List</string>

</resources>